# haskell-tpdb

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG  Compressor.hs  NOTES.md  README.md  cabal.project  plain2xtc.hs  srs2trs.hs  stack.yaml  tpdb.cabal  xtc2srs.hs
.github/workflows/: haskell-ci.yml
TPDB/: Compress.hs  Convert.hs  DP.hs  Data.hs  Input.hs  Mirror.hs  Pretty.hs  XTC.hs  Xml.hs
TPDB/CPF/Proof/: Read.hs  Type.hs  Util.hs  Write.hs  Xml.hs
TPDB/DP/: Graph.hs  Transform.hs  Unify.hs  Usable.hs
TPDB/Data/: Term.hs  Xml.hs
TPDB/Plain/: Read.hs  Write.hs
TPDB/Rainbow/Proof/: Statistics.hs  Type.hs  Xml.hs
TPDB/XTC/: Identifier.hs  Problem.hs  RS.hs  Read.hs  Rule.hs  Term.hs
TPDB/Xml/: Pretty.hs
src/TPDB/: ARI.hs  Convert.hs  Data.hs  Input.hs  Mirror.hs  Pretty.hs  XTC.hs  Xml.hs
src/TPDB/CPF/Proof/: Read.hs  Type.hs  (+3 more)
src/TPDB/DP/: Graph.hs  TCap.hs  Transform.hs  Unify.hs  Usable.hs
src/TPDB/Data/: Attributes.hs  Identifier.hs  Rule.hs  Term.hs  Xml.hs
src/TPDB/Input/: File.hs  Memory.hs
src/TPDB/Plain/: Read.hs  Write.hs
src/TPDB/XTC/: Read.hs  Term.hs  Write.hs
src/TPDB/Xml/: Pretty.hs
test/: 01.ari  02.trs  3.15.xml  3.39.xml  33.trs  AC08.trs  AC09.xml  AC28.cpf  AC28.xml  MNZ_10_labelled.xml  attributes.hs  dp-performance.hs  labelled.trs  parse_ac.hs  process_tpdb.hs  read_ARI.hs  read_complex.hs  read_cpf.hs  read_large.hs  read_print_srs.hs  read_print_trs.hs  read_print_trs_2.hs  read_print_xml.hs  read_print_xml_relative.hs  read_print_xml_theory.hs  rel01.ari  rel12.srs  rel12.xml  speed.hs  z001.ari  z001.srs
(+3 files in other folders)
